--- a/contactStyle.css
+++ b/contactStyle.css
@@ -223,7 +223,7 @@ a{
 }
 
 .icon-container i:hover{
-   background-color: var(--secondaryColour);                                              
+   background-color: var(--secondaryColour);
 }
 
 .icon-container a:hover{
@@ -281,14 +281,13 @@ a{
     .form-section{
       display: flex;
       flex-direction: column;
-
-
     }
 
     .comment{
       resize: vertical;
       outline: none;
       border: none;
+      font-size: 1.5rem;
     }
 
     input[type="text"], input[type='email']{
@@ -300,6 +299,7 @@ a{
       padding-left: 10px;
       text-transform: capitalize;
     }
+
 
     label{
       font-size: calc(var(--headingSize) * .75);
