--- a/contactStyle.css
+++ b/contactStyle.css
@@ -220,6 +220,7 @@ a{
   border: 3px solid var(--secondaryColour);
   padding: var(--btnPadding);
   margin-right: 1%;
+  position: relative;
 }
 
 .icon-container i:hover{
@@ -231,35 +232,66 @@ a{
 }
 
 
+.facebook-icon:hover::after, .instagram-icon:hover::after,
+.twitter-icon:hover::after, .envelope-icon:hover::after,
+.phone-icon:hover::after{
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 14px solid var(--secondaryColour);
+  position: absolute;
+  bottom: 300%;
+  transform: translateX(-50%);
+  left: 45%;
+}
+
+.facebook-icon:hover::before, .instagram-icon:hover::before,
+.twitter-icon:hover::before, .envelope-icon:hover::before,
+.phone-icon:hover::before{
+  width: max-content;
+  font-size: calc(var(--btnFontSize));
+  font-weight: var(--fontWeight);
+  color: var(--mainColour);
+  background-color: var(--secondaryColour);
+  position: absolute;
+  bottom: 350%;
+  border-radius: 4px;
+  padding: calc(var(--btnPadding) - .35rem) var(--btnPadding);
+  left: 45%;
+  transform: translateX(-50%);
+}
+
 
 /****facebook icon styling*****/
-  .facebook-icon:hover::after{
-
+  .facebook-icon:hover::before{
+    content: 'Facebook';
   }
 
 
 /*****instagram icon styling*****/
-  .instagram-icon:hover::after{
-
+  .instagram-icon:hover::before{
+    content: 'Instagram';
   }
 
 
 /*****twitter styling*****/
-  .twitter-icon:hover::after{
-
+  .twitter-icon:hover::before{
+    content: 'Twitter';
   }
 
 
 /*****envelope icon styling*****/
 
-  .envelope-icon:hover::after{
-
+  .envelope-icon:hover::before{
+    content: 'silverhanduk@gmail.com';
   }
 
   /*****phone icon styling****/
 
-    .phone-icon:hover::after{
-
+    .phone-icon:hover::before{
+      content: '075 7587 8035';
     }
 
 
@@ -290,7 +322,7 @@ a{
       font-size: 1.5rem;
     }
 
-    input[type="text"], input[type='email']{
+    .first-name, .second-name, .email{
       padding: calc(var(--padding) / 2) 0;
       font-size: 1.5rem;
       border-radius: 3px;
