--- a/style.css
+++ b/style.css
@@ -429,12 +429,13 @@ a{
   ********************/
   .Sell{
     grid-area: sell;
-    height: 65vh;
+    height: 75vh;
     width: 95%;
     background-color: rgba(0, 0, 0, 0.6);
     padding-bottom: var(--padding);
     margin: 0 auto calc(var(--margin) * 2.5) auto;
     position: relative;
+    /* border: 5px solid var(--secondaryColour); */
     box-shadow: 0 2px 2px var(--shadowColor), 0 4px 4px var(--shadowColor),
     0 8px 8px var(--shadowColor), 0 16px 16px var(--shadowColor), 0 32px 32px
     var(--shadowColor);
@@ -485,22 +486,17 @@ a{
 
 .sell-section-slides{
    display: flex;
-   align-items: flex-end;
-   height: 100%;
-   width: 100%;
-   position: absolute;
-   left: 0%;
-   bottom: 0%;
-   overflow-x: hidden;
-   z-index: -2;
+   align-items: center;
+   justify-content: space-around;
+   height: 30%;
+   width: 90%;
+   margin: 0 auto;
 }
 
 .sell-slide{
-  height: 100%;
-  width: 100%;
-  flex-shrink: 0;
-  animation: fade 1.5s  ease-in-out;
-  transition: ease-in-out;
+  height: 70%;
+  width: 30%;
+
 }
 
 
