--- a/about.css
+++ b/about.css
@@ -199,9 +199,48 @@ a{
    padding: .1rem;
  }
 
+ /*******************
+     hero styling
+  ******************/
+
+ .hero{
+   position: relative;
+   height: 60vh;
+   width: 98vw;
+   background: url('Images/MaleTrainers/maleTrainer18.jpg'), rgba(0, 0, 0, .5);
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
+   margin: 0 auto;
+ }
+
+ .page-title{
+   text-align: center;
+   color: var(--secondaryColour);
+   font-size: 5rem;
+   margin: 0 auto;
+   position: relative;
+ }
+
+ .dark-filter{
+   background-color: rgba(0, 0, 0, 0.6);
+   height: 100%;
+   width: 100%;
+   position: absolute;
+   display: flex;
+   align-items: center;
+ }
 
 
 
+
+/*****************
+Main section styling
+ *******************/
+
+ .main{
+   height: 100vh;
+ }
 
 
 
@@ -211,7 +250,6 @@ a{
   ******************/
 
   .footer{
-    grid-area: footer;
     display: flex;
     justify-content: center;
     align-items: center;
