--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a{
  *******************************/
 
 :root{
-  --mainColour: hsl(200, 6%, 10%);
+  --mainColour: white;
   --secondaryColour: white;
   --shadowColor: rgba(0, 0, 0, 0.12);
   --padding: 1em;
@@ -123,10 +123,10 @@ a{
 
  /*******Icons styling*********/
 
-
+/*
  .shopIcon, .aboutIcon, .sellIcon, .contactIcon{
    position: relative;
-   /* transition: hover calc(var(--transition) * 2) ease-in-out; */
+   transition: hover calc(var(--transition) * 2) ease-in-out;
  }
 
 
@@ -179,7 +179,7 @@ a{
  .contactIcon:hover::before{
    content:"Contact";
    transform: translateX(-50%) scale(1);
- }
+ } */
 
 
 
@@ -283,7 +283,7 @@ a{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
-    height: 90vh;
+   height: 90vh;
  }
 
  .section h3, .section h4{
@@ -312,6 +312,8 @@ a{
 
  .product-img img{
    position: relative;
+   height: 40%;
+   width: 40%;
    border: 3px solid white;
    box-shadow: 0px 2px 2px var(--shadowColor), 0 4px 4px var(--shadowColor),
                0px 8px 8px var(--shadowColor);
@@ -403,7 +405,7 @@ a{
 
  .WomenCollection{
    grid-area: womenSection;
-   max-width: 1170px;
+   /* max-width: 1170px; */
    width: 90vw;
    margin: 0 auto;
    display: flex;
