--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/********************
-Google fonts import
-********************/
-
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&display=swap');
 
 /*******************************
 Reset all  margins, padding, anchor tags and
@@ -59,14 +54,7 @@ a{
 
  body{
    background-color: var(--mainColour);
-   font-family: 'Baloo Tamma 2', cursive;
-   display: grid;
-   grid-template-rows: repeat(3, auto);
-   grid-template-areas:
-   "header"
-   "main"
-   "footer";
-   grid-row-gap: 1%;
+   font-family: 'Just Another Hand', cursive;
  }
 
 /***************************
@@ -81,7 +69,7 @@ a{
    height: 15vh;
    display: flex;
    justify-content: space-between;
-   align-items: flex-end;
+   align-items: center;
 
  }
 
@@ -130,7 +118,7 @@ margin-top: 15%;
 
  .nav-container + .logo{
    height: 50px;
-   align-self: center;
+   
  }
 
  /*******Icons styling*********/
@@ -328,9 +316,13 @@ margin-top: 15%;
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2) {
 .logo{
- transform: scale(.5);
+ transform: scale(.6);
 }
 
+.intro .logo{
+  margin-right: -10%;
+  margin-bottom: -3%;
+}
 
 
 }
