--- a/style.css
+++ b/style.css
@@ -22,29 +22,26 @@ a{
 
 :root{
   --mainColour: white;
-  --secondaryColour: white;
+  --secondaryColour: rgba(247, 0, 13, 1);
   --shadowColor: rgba(0, 0, 0, 0.12);
   --padding: 1em;
-  --margin: 1em;
+  --margin: 1.5rem;
   --btnFontSize: 1.3rem;
   --btnPadding: .5em;
   --transition: .3s;
   --fontWeight: 600;
-  --directionBtnColor: rgba(245, 245, 240, 0.3);
-  --directionBtnHoverColor: rgba(245, 245, 240, 0.75);
-  --sectionColour: hsl(216, 23%, 9%);
+  --headingSizeMobile: 2rem;
   --headingSize: 2.5rem;
-  --gridGap: 1.5em;
+  --gridRowGap: .75rem;
+  --gridColumnGap: .75rem;
   --transitionTime: .3s;
-  --addToCartColor: hsl(17, 100%, 50%);
-  --addToCartColorDiluted: hsl(17, 100%, 60%);
-  --sellSectionBackground: hsl(250, 100%, 90%);
   --letterSpacing: .1em;
   --btnBorderThickness: 4px;
   --btnBorderRadius: 4px;
   --fontColour: black;
   --navMenuColour: snow;
   --fontSize: 22px;
+  --mobileFontSize: 16px;
   --navMenuPadding: 1.5em 1em;
 }
 
@@ -110,15 +107,11 @@ margin-top: 15%;
  }
 
 
-
-
-
-
  /* logo inside Navigation */
 
  .nav-container + .logo{
    height: 50px;
-   
+
  }
 
  /*******Icons styling*********/
@@ -193,16 +186,13 @@ margin-top: 15%;
     styling
   ***************************/
 .intro{
-
-   height: 45vh;
+  height: 45vh;
+  margin-bottom: var(--margin);
 }
 
 .intro{
  position: relative;
 }
-
-
-
 
 /* Slides Container */
 
@@ -252,6 +242,58 @@ margin-top: 15%;
      Men section
   *********************/
 
+.men-section-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 80vh;
+  align-items: center;
+
+}
+
+.men-section-title{
+  font-size: var(--headingSize);
+}
+
+.men-section-product-container{
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  height: 100%;
+  width: 90%;
+  grid-row-gap: var(--gridRowGap);
+  grid-column-gap: var(--gridColumnGap);
+  margin-bottom: var(--margin);
+}
+
+.men-section-product{
+  height: 100%;
+  width: 100%;
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.men-product-img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1 ;
+}
+
+.men-product-description,.men-product-price{
+  color: var(--mainColour);
+  font-size: var(--fontSize);
+  position: absolute;
+  letter-spacing: var(--letterSpacing);
+}
+
+.men-product-description{
+  top: 40%;
+}
+
+.men-product-price{
+  top: 50%;
+}
 
 
 
@@ -263,13 +305,11 @@ margin-top: 15%;
   ******************/
 
   .footer{
-    grid-area: footer;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 30vh;
-    background-color: var(--secondaryColour);
-    box-shadow: 1px 2px 4px var(--shadowColor);
+    background-color: var(--mainColour);
   }
 
   .footer .logo{
@@ -322,6 +362,26 @@ margin-top: 15%;
 .intro .logo{
   margin-right: -10%;
   margin-bottom: -3%;
+}
+
+
+/* men section */
+.men-section-container{
+   height: 60vh;
+}
+
+.men-section-product-container{
+  width: 100%;
+}
+
+.men-product-description{
+  top: 40%;
+  font-size: var(--mobileFontSize);
+}
+
+.men-product-price{
+  top: 60%;
+  font-size: var(--mobileFontSize);
 }
 
 
