--- a/style.css
+++ b/style.css
@@ -351,6 +351,14 @@ margin-top: 15%;
   overflow-x: hidden;
 }
 
+.middle-slide-img{
+  height: 100%;
+  width: 100%;
+  flex-shrink: 0;
+  animation: fade 1.5s  ease-in-out;
+  transition: ease-in-out;
+}
+
 
 
 
@@ -414,7 +422,7 @@ margin-top: 15%;
  transform: scale(.6);
 }
 
-.intro .logo{
+.intro .logo, .middle .logo{
   margin-right: -10%;
   margin-bottom: -3%;
 }
