--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@ a{
   --secondaryColour: rgba(247, 0, 13, 1);
   --shadowColor: rgba(0, 0, 0, 0.12);
   --padding: 1em;
+  --btnColorDilute: rgba(247, 0, 13, .7);
   --margin: 1.5rem;
   --btnFontSize: 1.3rem;
-  --btnPadding: .2em .5em;
+  --btnPadding: .5em;
   --transition: .3s;
   --fontWeight: 600;
   --headingSizeMobile: 2rem;
@@ -41,7 +42,7 @@ a{
   --fontColour: black;
   --navMenuColour: snow;
   --fontSize: 22px;
-  --mobileFontSize: 16px;
+  --mobileFontSize: 1.5rem;
   --navMenuPadding: 1.5em 1em;
 }
 
@@ -320,10 +321,11 @@ margin-top: 15%;
   color: var(--mainColour);
   padding: var(--btnPadding);
   transition: all var(--transition);
+  letter-spacing: var(--letterSpacing);
 }
 
 .shop-btn-men:hover{
-  background: rgba(247, 0, 13, .7);
+  background: var(--btnColorDilute);
   transform: scale(.95);
 }
 
@@ -443,12 +445,64 @@ margin-top: 15%;
     color: var(--mainColour);
     padding: var(--btnPadding);
     transition: all var(--transition);
+    letter-spacing: var(--letterSpacing);
   }
 
   .shop-btn-women:hover{
-    background: rgba(247, 0, 13, .7);
+    background: var(--btnColorDilute);
     transform: scale(.95);
   }
+
+  /*****************
+     Sell Section
+   *****************/
+
+.sell-section-container{
+  height: 35vh;
+  position: relative;
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 1.5px 1.5px 2.5px rgba(0, 0, 0, 0.5),
+  2px 2px 3px rgba(0, 0, 0, 0.5), 2.5px 2.5px 3.5px rgba(0, 0, 0, 0.5),
+  3px 3px 4px rgba(0, 0, 0, 0.5);
+}
+
+.sell-section-img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.sell-para-btn{
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+  width: inherit;
+  justify-content: center;
+  align-items: center;
+}
+
+.sell-section-paragraph{
+  font-size: calc(var(--fontSize)*2);
+  text-align: center;
+  letter-spacing: var(--letterSpacing);
+}
+
+.sell-btn{
+  margin-top: var(--margin);
+  color: inherit;
+  padding: var(--btnPadding);
+  background-color: var(--secondaryColour);
+  font-size: calc(var(--fontSize)*1.2);
+  letter-spacing: var(--letterSpacing);
+}
+
+.sell-btn:hover{
+  background-color: var(--btnColorDilute);
+  transform: scale(.95);
+}
+
 
  /******************
   Footer and icons
@@ -516,7 +570,9 @@ margin-top: 15%;
 }
 
 
-/* men section */
+/**********************
+  men and women section
+ ***********************/
 .men-section-container, .women-section-container{
    height: 60vh;
 }
@@ -537,6 +593,15 @@ margin-top: 15%;
 .men-product-price, .women-product-price{
   top: 35%;
   font-size: var(--mobileFontSize);
+}
+
+/**************
+  Sell Section
+ **************/
+
+.sell-section-paragraph{
+  font-size: var(--mobileFontSize);
+  width: 80%;
 }
 
 
