[AM]: Changed men and women section width

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a{
   --shadowColor: rgba(0, 0, 0, 0.12);
   --padding: 1em;
   --btnColorDilute: rgba(247, 0, 13, .7);
-  --margin: 1.5rem;
+  --margin: 5%;
   --btnFontSize: 1.3rem;
   --btnPadding: .5em;
   --transition: .3s;
@@ -256,7 +256,7 @@ margin-top: 15%;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   height: 100%;
-  width: 90%;
+  width: 100%;
   grid-row-gap: var(--gridRowGap);
   grid-column-gap: var(--gridColumnGap);
   margin-bottom: var(--margin);
@@ -365,7 +365,7 @@ margin-top: 15%;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     height: 100%;
-    width: 90%;
+    width: 100%;
     grid-row-gap: var(--gridRowGap);
     grid-column-gap: var(--gridColumnGap);
     margin-bottom: var(--margin);
